# cinemabot-telegram

./: .gitignore  README.md  bot.py  pyproject.toml
bot/: chat_data.py  main.py  movie.py
bot/utility/: language.py  message.py
locale/: messages.pot
locale/en/LC_MESSAGES/: messages.po
locale/uk/LC_MESSAGES/: messages.po
